Fix CSS bug that was causing dropdown menus to be clipped off.

--- a/src/app/widgets/shrink-wrap/shrink-wrap.component.scss
+++ b/src/app/widgets/shrink-wrap/shrink-wrap.component.scss
@@ -11,7 +11,7 @@
 }
 
 .inner-wrapper {
-  overflow: hidden;
+  overflow: visible;
   position: relative;
   width: -moz-fit-content;
   width: fit-content;
